# kafka-schema-cli

./: Cargo.toml  README.md
schemas/listings/: Attachment.avsc  BuildingSize.avsc  DateSold.avsc  Delete.avsc  Embedded.avsc  FinancialTerms.avsc  Geocode.avsc  LandSize.avsc  Listing.avsc  ListingAddress.avsc  ListingAddressDisplay.avsc  ListingAddressEmbedded.avsc  ListingEvent.avsc  ListingFeature.avsc  ParkingSpaces.avsc  Purchase.avsc  PurchaseDisplay.avsc  PurchasePrice.avsc  SoldPrice.avsc  SoldPriceDisplay.avsc  SoldPricePrice.avsc  Usage.avsc
src/: config.rs  main.rs
src/clients/: kafka_client.rs  mod.rs  schema_registry_client.rs
topics/events/property/listings/raw/v1/: config.yaml  key-schema.avsc
topics/events/property/listings/raw/v2/: config.yaml
