[package]
name = "schema-registry-cli"
version = "0.1.0"
authors = ["Jordan Holland <jordan.holland@rea-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
avro-rs = "0.11.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
